--- a/UI/popup.css
+++ b/UI/popup.css
@@ -17,8 +17,11 @@
     padding-left: 15px;
     margin-bottom: 0px
   }
-  
   #display {
+    position: fixed;
+    bottom: 10px;
+    right: 10px;
+    z-index: 9999999;
     Color: white;
     font-family: sans-serif;
     line-height: 2;
@@ -26,8 +29,8 @@
     grid-template-areas:
       'header'
       'main';
-    height: 30%;
-    width: 30%;
+    height: 25%;
+    width: 25%;
   background: linear-gradient(180deg, #4b6cb7 0%, #182848 100%);
     border-radius: 15px;
   }
