--- a/UI/popup.css
+++ b/UI/popup.css
@@ -6,6 +6,7 @@
     padding-bottom: 0px;
     margin-bottom: 0px;
     font-weight: 600;
+    background: rgb(255, 255, 255, 0.15)
     
   }
   #main{
@@ -15,7 +16,8 @@
     font-size: 1em;
     padding-right: 15px;
     padding-left: 15px;
-    margin-bottom: 0px
+    margin-bottom: 0px;
+    background: rgb(255, 255, 255, 0.15)
   }
   #display {
     position: fixed;
@@ -31,6 +33,6 @@
       'main';
     height: 25%;
     width: 25%;
-  background: linear-gradient(180deg, #4b6cb7 0%, #182848 100%);
+    background: rgba(0, 0, 0);
     border-radius: 15px;
   }
